--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 
 <body>
 
+    <h1>Cambiado</h1>
+
     <img src="http://localhost:3000/image/products/6008dfc95d521843f0748eec-777.jpg" alt="foto">
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
